# SeggerOpenFlashLoader

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
Src/: FlashOS.h  FlashPrg.c
boards/Alientek/: CMakeLists.txt  JLinkDevices.xml  stm32h7xx_hal_conf.h
boards/Alientek/board_h743/: CMakeLists.txt  FlashDev.c  board.c  board.h  quadspi.c  quadspi.h  stm32h7xx_hal_conf.h
boards/Alientek/board_h743/W25Q256/: w25q256.c  w25q256.h
boards/DAMIAO/: CMakeLists.txt  JLinkDevices.xml
boards/DAMIAO/board_MC02/: CMakeLists.txt  FlashDev.c  board.c  board.h  octospi.c  octospi.h  stm32h7xx_hal_conf.h
boards/DAMIAO/board_MC02/W25Q64/: w25q64.c  w25q64.h
boards/None/: CMakeLists.txt  JLinkDevices.xml
boards/None/board_FocG431Pico/: CMakeLists.txt  FlashDev.c  board.c  board.h  spi.c  spi.h
boards/RTThread/: CMakeLists.txt  JLinkDevices.xml
boards/RTThread/board_ArtPi/: CMakeLists.txt  FlashDev.c  board.c  board.h  quadspi.c  quadspi.h  spi.c  spi.h  stm32h7xx_hal_conf.h
cmake/: gcc-arm-none-eabi.cmake
drivers/FlashAbstractionLayer/: CMakeLists.txt  FAL_STM_HAL_OSPI.c  FAL_STM_HAL_QSPI.c  FAL_STM_HAL_SPI.c  FlashAbstractionLayer.c  FlashAbstractionLayer.h
drivers/stm32g4xx/: CMakeLists.txt  stm32g4xx_flashloader.ld  syscalls.c
drivers/stm32h7xx/: CMakeLists.txt  stm32h7xx_flashloader.ld
